<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/red">

    <Spinner
        android:id="@+id/spinnerText_type2"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/red_text"
        android:hint="@string/expense_type"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="@color/red_text"
        android:textColorHint="@color/red_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_cost"
        tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />


    <EditText
        android:id="@+id/editText_name"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="160dp"
        android:backgroundTint="@color/red_text"
        android:hint="@string/expense_name"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="@color/red_text"
        android:textColorHint="@color/red_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_cost"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/cost"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:backgroundTint="@color/red_text"
        android:textColor="@color/red_text"
        android:textColorHint="@color/red_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name"

        android:inputType="number"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_type"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/red_text"
        android:textColor="@color/red_text"
        android:textColorHint="@color/red_text"
        android:hint="@string/expense_type"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_cost"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/red_button"
        android:textColor="@color/red_text"
        android:text="@string/add"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_type" />

    <Button
        android:id="@+id/show_button"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/red_button"
        android:textColor="@color/red_text"
        android:text="@string/showInfo"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/red_button"
        android:text="@string/delete"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_button" />

</androidx.constraintlayout.widget.ConstraintLayout>